@@ -1,3 +1,9 @@
+2010-10-16  Ulrich Mueller  <ulm@gentoo.org>
+
+	* ebuild-mode-keywords.el (ebuild-mode-keywords-flag-o-matic):
+	Update list of functions. Patch by Thomas Kahle <tom111@gmx.de>
+	in bug 341255.
+
 2010-10-14  Ulrich Mueller  <ulm@gentoo.org>
 
 	* gentoo-syntax.el (ebuild-commands-list): Add "prepare" and
